some imgs are stretched, fixed it by (object fit: cover)

--- a/17_gallery_scroller/style.css
+++ b/17_gallery_scroller/style.css
@@ -27,6 +27,7 @@ body {
     height: 500px;
     border: 0px;
     border-radius: 20px;
+    object-fit: cover;
 }
 i {
     color: red;
